Fix: added gaps between form blocks

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -128,6 +128,19 @@ body {
   top: var.$content-margin;
 }
 
+.mt-gap {
+  margin-top: var.$content-margin;
+}
+.mr-gap {
+  margin-right: var.$content-margin;
+}
+.mb-gap {
+  margin-bottom: var.$content-margin;
+}
+.ml-gap {
+  margin-left: var.$content-margin;
+}
+
 .flx-col,
 .flx-row {
   display: flex;
